--- a/package.json
+++ b/package.json
@@ -4,21 +4,27 @@
   "private": true,
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
+    "@svgr/plugin-svgo": "^8.1.0",
+    "@svgr/webpack": "^8.1.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.103",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "css-select": "^5.1.0",
     "framer-motion": "^11.3.8",
     "libphonenumber-js": "^1.11.4",
+    "nth-check": "^2.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.1",
     "react-icons": "^5.2.1",
     "react-phone-input-2": "^2.15.1",
     "react-router-dom": "^6.25.1",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-toastify": "^10.0.5",
+    "resolve-url-loader": "^5.0.0",
+    "svgo": "^3.3.2",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4",
     "yup": "^1.4.0"
@@ -52,7 +58,7 @@
     "@testing-library/react": "^16.0.0",
     "autoprefixer": "^10.4.19",
     "jest": "^27.5.1",
-    "postcss": "^8.4.39",
+    "postcss": "^8.4.40",
     "tailwindcss": "^3.4.6"
   }
 }
